Bug 891650 - Use mTransform instead of GetDTTransform() in Mask(). r=bas, a=bajaj

GetDTTransform includes the device offset. We need to avoid that in order for things to work properly.